<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.gopal.inventoryrealm.EditorActivity">

    <TextView
        style="@style/text_header_style"
        android:layout_marginTop="15dp"
        android:text="@string/product_name" />

    <EditText
        android:id="@+id/product_name"
        style="@style/edit_field_style"
        android:hint="@string/product_name_header"
        android:inputType="text" />

    <TextView
        style="@style/text_header_style"
        android:layout_marginTop="15dp"
        android:text="@string/product_price" />

    <EditText
        android:id="@+id/product_price"
        style="@style/edit_field_style"
        android:hint="@string/product_price"
        android:inputType="numberDecimal" />

    <TextView
        style="@style/text_header_style"
        android:layout_marginTop="15dp"
        android:text="@string/product_quantity" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/down_button"
            style="@style/button_style"
            android:text="@string/down" />

        <TextView
            android:id="@+id/product_quantity"
            style="@style/text_header_style"
            android:layout_marginRight="15dp"
            android:layout_marginTop="0dp"
            android:textStyle="normal" />

        <Button
            android:id="@+id/up_button"
            style="@style/button_style"
            android:text="@string/up" />

    </LinearLayout>

    <TextView
        style="@style/text_header_style"
        android:text="@string/supplier_name" />

    <EditText
        android:id="@+id/seller_name"
        style="@style/edit_field_style"
        android:hint="@string/supplier_name"
        android:inputType="text" />

    <TextView
        style="@style/text_header_style"
        android:text="@string/supplier_phone_number" />

    <EditText
        android:id="@+id/seller_phone_number"
        style="@style/edit_field_style"
        android:hint="@string/supplier_phone_no_header"
        android:inputType="phone"
        android:maxLength="10"/>

</LinearLayout>
